--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                 <div class="col-md-3" style="height: 300px; ">
                         <img src="Roots_Logo.jpg" alt="Logo" style="overflow:hidden; width:100%; height: 100%; ">
                 </div>
-                <div class="col-md-offset-3" style="padding:2px; height: 300px; border:solid;">
+                <div class="col-md-offset-3" style="height: 300px; ">
                         <img src="Roots-Quote.jpg" alt="Quote Collage" style="overflow:hidden; width:100%; height:100%;">
                 </div>
             </div>
