--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
         <div class="container" style="width:100vw; padding:0px;">
             <div class="row" style="margin-top:70px; height:350px;">
                 <div class="col-md-3" style="height: 300px; padding:0px;">
-                        <img src="Roots_Logo.jpg" alt="Logo" style="height:300px; width:auto;">
+                        <img src="Roots_Logo.jpg" alt="Logo" style="width:100%;">
                 </div>
                 <div class="col-md-offset-3" style="height: 300px; padding:0px;">
                         <img src="Roots-Quote.jpg" alt="Quote Collage" style="overflow:hidden; width:100%; height:100%;">
