--- a/index.html
+++ b/index.html
@@ -76,10 +76,10 @@
     <section id="intro" class="intro-section">
         <div class="container" style="width:100vw; padding:0px;">
             <div class="row" style="margin-top:70px; height:350px;">
-                <div class="col-md-3" style="height: 300px; padding:0px;">
-                        <img src="Roots_Logo_Clear.png" alt="Logo" style="width:100%;">
+                <div class="col-md-3" style="padding:0px;">
+                        <img src="Roots_Logo_Clear.png" alt="Logo" style="width:100%; height:100%;">
                 </div>
-                <div class="col-md-offset-3" style="height: 300px; padding:0px;">
+                <div class="col-md-offset-3" style="padding:0px;">
                         <img src="Roots-Quote.jpg" alt="Quote Collage" style="overflow:hidden; width:100%; height:100%;">
                 </div>
             </div>
@@ -96,7 +96,7 @@
                         Apply Now!
                     </a>
                 </div>
-                <div class="col-md-9" style="background-color:#2d5d83; font-size:36px; padding:7px 0px 9px 38px; margin: 0 0 20px 0;">
+                <div class="col-md-9" style="background-color:#2d5d83; font-size:36px; padding:7px 0px 9px 38px; margin: 0 0 20px 0; color:white;">
                     <h3>ABOUT</h3>
                 </div>
             </div>
@@ -114,7 +114,7 @@
     <section id="programs" class="programs-section">
         <div class="container">
             <div class="row" style:"padding:2px;">
-                <div class="col-md-9" style="background-color:#2d5d83; font-size:36px; padding:7px 0px 9px 38px; margin: 0 0 20px 0;">
+                <div class="col-md-9" style="color:white; background-color:#2d5d83; font-size:36px; padding:7px 0px 9px 38px; margin: 0 0 20px 0;">
                     <h3>PROGRAMS</h3>
                 </div>
             </div>
@@ -139,7 +139,7 @@
     <section id="sponsors" class="sponsors-section">
         <div class="container">
             <div class="row" style:"padding:2px; ">
-                <div class="col-md-9" style="background-color:#2d5d83; font-size:36px; padding:7px 0px 9px 38px; margin: 0 0 20px 0;">
+                <div class="col-md-9" style="color:white; background-color:#2d5d83; font-size:36px; padding:7px 0px 9px 38px; margin: 0 0 20px 0;">
                     <h3>SPONSORS/COLLABORATORS</h3>
                 </div>
             </div>
@@ -167,7 +167,7 @@ For more information on the Milton Park Recreation Association, please visit <a 
     <section id="resources" class="resources-section">
         <div class="container">
             <div class="row" style:"padding:2px;">
-                <div class="col-md-9" style="background-color:#2d5d83; font-size:36px; padding:7px 0px 9px 38px; margin: 0 0 20px 0;">
+                <div class="col-md-9" style="color:white; background-color:#2d5d83; font-size:36px; padding:7px 0px 9px 38px; margin: 0 0 20px 0;">
                     <h3>RESOURCES</h3>
                 </div>
             </div>
