--- a/index.html
+++ b/index.html
@@ -76,10 +76,10 @@
     <section id="intro" class="intro-section">
         <div class="container" style="width:100vw; padding:0px;">
             <div class="row" style="margin-top:70px; height:350px;">
-                <div class="col-md-3" style="padding:0px; height:350px;">
-                        <img src="Roots_Logo.jpg" alt="Logo" style="width:100%; height:auto;">
+                <div class="col-md-3" style="padding:0px; height:350px; background-color:white;">
+                        <img src="Roots_Logo_Clear.png" alt="Logo" style="width:100%; height:100%;">
                 </div>
-                <div class="col-md-offset-3" style="padding:0px; height:350px;">
+                <div class="col-md-offset-3" style="padding:0px; height:350px; background-color:white;">
                         <img src="Roots-Quote.jpg" alt="Quote Collage" style="overflow:hidden; width:100%; height:100%;">
                 </div>
             </div>
