--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                     <h3 style="text-align:left;">ABOUT</h3>
                 </div>
             </div>
-            <div class="row" style="text-align:justify; ">
+            <div class="row" style="text-align:left; ">
                 <div class="col-md-9" style="padding: 5px; background-color:white; font-size:14px; color:black; font-family:'Open Sans', san-serif;">
                     <p><span style="color:#25c5df; font-size:18px;"><b>ABOUT ROOTS</b></span> <br><br>Youth Mental Health Alliance is a student run organization that aims to enhance support, knowledge and access to mental health services for students in Montreal. As students we believe that the best way to promote mental health and eliminate the stigma that is associated with it is through education and understanding of the issues that mental health encompasses. Because of this, we’ve created Roots on the basis of three pillars – education, support and communication. <br><br>We aim to achieve this through outreach programs that are meant to educate students both on University campuses and in Montreal. Our outreach programs are specifically targeted towards the segment of the population with the most potential, and with the greatest ability to drive change: the youth. By educating the youth, we are able to eliminate the stigma surrounding mental health from the ground up, so that young people may help their parents and their elders to understand the true gravity of mental illness. By focusing on the youth, we are able to provide a forum to discuss topics which many youth might otherwise be afraid to bring up. <br><br>We hope that our initiative will inspire youth who might be dealing with mental illness to have the confidence and the initiative to make a change as well. 
 </p>
@@ -118,7 +118,7 @@
                     <h3 style="text-align:left;">PROGRAMS</h3>
                 </div>
             </div>
-            <div class="row" style="text-align:justify;">
+            <div class="row" style="text-align:left;">
                 <div class="col-md-9" style="padding: 5px; background-color:white; font-size:14px; color:black; font-family:'Open Sans', san-serif; ">
                     <div class="col-md-3">
                         <i class="fa fa-product-hunt style="font-size:50px;"></i>
@@ -143,7 +143,7 @@
                     <h3 style="text-align:left;">SPONSORS/COLLABORATORS</h3>
                 </div>
             </div>
-            <div class="row" style="text-align:justify;">
+            <div class="row" style="text-align:left;">
                 <div class="col-md-9" style="padding: 5px; background-color:white; font-size:14px; color:black; font-family:'Open Sans', san-serif; ">
                     <p><span style="color:#25c5df; font-size:18px;"><b>SPONSORS</b></span> <br><br> 
                         <b>Milton-Parc Recreation Center<br></b>
@@ -155,7 +155,7 @@ For more information on the Milton Park Recreation Association, please visit <a 
 <center><a href="https://monsteracademymtl.wordpress.com/" target="_blank"><u>Monster Academy</u></a><br>
 <a href="http://www.cmha.ca/" target="_blank"><u>Canadian Mental Health Organization</u></a><br>
 <a href="http://coco-net.org/" target="_blank"><u>COCo Montreal</u></a></p>
-                    <p><span style="color:#25c5df; font-size:18px; text-align:justify"><b>COLLABORATORS</b></span> <br><br> More information coming soon! </p>
+                    <p><span style="color:#25c5df; font-size:18px; text-align:left"><b>COLLABORATORS</b></span> <br><br> More information coming soon! </p>
                 </div>
                 </div>
         </div>
@@ -171,7 +171,7 @@ For more information on the Milton Park Recreation Association, please visit <a 
                     <h3 style="text-align:left;">RESOURCES</h3>
                 </div>
             </div>
-            <div class="row" style="text-align:justify;">
+            <div class="row" style="text-align:left;">
                 <div class="col-md-9" style="padding: 5px; background-color:white; font-size:14px; color:black; font-family:'Open Sans', san-serif; ">
                     <p>Part of Roots’ core mandate is to make mental health services more accessible to youth and increase their awareness of local programs and services. The following is a list of just a few of the many mental health resources available for youth in Montreal. Click their icon to read more about them. </p>
                 </div>
