--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
     <section id="about" class="about-section">
         <div class="container">
             <div class="row" style:"padding:2px;">
-                <div class="col-lg-offset-8 col-md-offset-8" style="width: 250px; background-color:#25c5df; font-size:36px; color: black; position:fixed;">
+                <div class="col-lg-offset-9 col-md-offset-8" style="width: 250px; background-color:#25c5df; font-size:36px; color: black;">
                     <h3><i class="fa fa-calendar"></i> Application Deadline:</h3>
                     <h1 style="text-decoration:strong;">JAN. - APR. <br> 2016</h1>
                     <a href="#" class="btn btn-lg btn-outline">
