--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 </p>
                     <p><span style="color:#25c5df; font-size:18px;"><b>ABOUT MENTAL HEALTH</b></span> <br><br> Maecenas vitae turpis libero. Phasellus finibus, massa ac venenatis tempus, nibh ex vestibulum lacus, nec mollis niNam ultrices nisi ex, at iaculis ex eleifend quis. Maecenas vitae turpis libero. Phasellus finibus, massa ac venenatis tempus, nibh ex vestibulum lacus, nec mollis niNam ultrices nisi ex, at iaculis ex eleifend quis. </p>
                 </div>
-                <div class="col-lg-offset-1 col-lg-3 col-md-offset-1 col-md-3" style="width: 250px; background-color:#25c5df; font-size:36px; color: black;">
+                <div class="col-lg-3 col-md-3" style="width: 250px; background-color:#25c5df; font-size:36px; color: black; margin: 0 20px 0 0;">
                     <h3><i class="fa fa-calendar"></i> Application Deadline:</h3>
                     <h1 style="text-decoration:strong;">JAN. - APR. <br> 2016</h1>
                     <a href="#" class="btn btn-lg btn-outline">
