--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
     <!-- About Section -->
     <section id="about" class="about-section">
         <div class="container">
-            <div class="row" style:"padding:2px; height:72px;">
+            <div class="row" style:"padding:2px; display:inline;">
                 <div class="col-lg-9 col-md-9" style="background-color:#2d5d83; font-size:36px; padding:7px 0px 9px 38px; margin: 0 0 20px 0; color:white;">
                     <h3 style="text-align:left;">ABOUT</h3>
                 </div>
