--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                     <h3 style="text-align:left;">ABOUT</h3>
                 </div>
                 <div class="col-lg-3 col-md-3" style="height:72px; overflow:visible; width: 250px; background-color:#25c5df; font-size:36px; color: black; margin: 0 0 0 20px; overflow:visible;">
-                    <span style="background-color:#25c5df;"><h3><i class="fa fa-calendar"></i> The Dialogue Project :</h3>
+                    <span style="background-color:#25c5df; float:right;"><h3><i class="fa fa-calendar"></i> The Dialogue Project :</h3>
                     <h1 style="text-decoration:strong;">JAN. - APR. <br> 2016</h1>
                     <a href="#" class="btn btn-lg btn-outline">
                         Register Now!
