--- a/index.html
+++ b/index.html
@@ -105,7 +105,18 @@
                 <div class="col-lg-9 col-md-9" style="padding: 25px; background-color:white; font-size:14px; color:black; font-family:'Open Sans', san-serif; text-align:left;">
                     <p><span style="color:#25c5df; font-size:18px;"><b>ABOUT ROOTS</b></span> <br><br>Youth Mental Health Alliance is a student run organization that aims to enhance support, knowledge and access to mental health services for students in Montreal. As students we believe that the best way to promote mental health and eliminate the stigma that is associated with it is through education and understanding of the issues that mental health encompasses. Because of this, we’ve created Roots on the basis of three pillars – education, support and communication. <br><br>We aim to achieve this through outreach programs that are meant to educate students both on University campuses and in Montreal. Our outreach programs are specifically targeted towards the segment of the population with the most potential, and with the greatest ability to drive change: the youth. By educating the youth, we are able to eliminate the stigma surrounding mental health from the ground up, so that young people may help their parents and their elders to understand the true gravity of mental illness. By focusing on the youth, we are able to provide a forum to discuss topics which many youth might otherwise be afraid to bring up. <br><br>We hope that our initiative will inspire youth who might be dealing with mental illness to have the confidence and the initiative to make a change as well. 
 </p>
-                    <p><span style="color:#25c5df; font-size:18px;"><b>ABOUT MENTAL HEALTH</b></span> <br><br> Maecenas vitae turpis libero. Phasellus finibus, massa ac venenatis tempus, nibh ex vestibulum lacus, nec mollis niNam ultrices nisi ex, at iaculis ex eleifend quis. Maecenas vitae turpis libero. Phasellus finibus, massa ac venenatis tempus, nibh ex vestibulum lacus, nec mollis niNam ultrices nisi ex, at iaculis ex eleifend quis. </p>
+                    <p><span style="color:#25c5df; font-size:18px;"><b>ABOUT MENTAL HEALTH</b></span> <br><br> Mental health is not merely the absence of mental disorder but is an overall feeling of emotional, psychological and social well-being. In this state of well-being an individual:
+ 	Realizes their own potential
+  	Can cope with the normal stresses of life
+  	Can work productively and fruitfully
+  	Is able to make a contribution to his or her community
+ 
+(World Health Organization)
+ 
+Mental illness on the other hand is characterized by alterations in thinking, mood or behaviour – or some combination thereof – associated with significant distress and impaired functioning. This often leads to diagnosis of a clinical condition (based on the Diagnostic and Statistical Manual of Mental Disorders (DSM-5)).
+ 
+A common misconception is that mental health or well-being and mental illness are opposing ends of a spectrum. Each of these constructs is on it’s own spectrum from low to high. As an example to illustrate this, one may have high mental illness (diagnosed condition) but also high mental health as they may be able to engage in activities such as volunteering or work and may have a good network of support from family and friends. As such, we cannot assume that if an individual has a diagnosed condition, they have poor mental health, and equally so we cannot assume that just because someone does not have a diagnosed or clinical condition that they have high mental health.
+</p>
                 </div>
             </div></div>
     </section>
