--- a/index.html
+++ b/index.html
@@ -131,8 +131,8 @@ Mental illness on the other hand is characterized by alterations in thinking, mo
                 </div>
             </div>
             <div class="row" style="text-align:left;">
-                <div class="col-md-9" style="padding: 25px; background-color:white; font-size:14px; color:black; font-family:'Open Sans', san-serif; ">
-                    <div class="col-md-3">
+                <div class="col-md-9" style="padding: 10px; background-color:white; font-size:14px; color:black; font-family:'Open Sans', san-serif; ">
+                    <div class="col-md-3" style="padding:2px; width: 30%">
                         <img onclick="TINY.box.show({html:'THE DIALOGUE PROJECT<br>
 The Dialogue Project is a series of 3 workshops hosted by Roots that will be held at Milton-Park Community Center in winter of 2016 and will aim to educate youth on themes related to student mental health. The main goal of the project is to enhance the dialogue and deepen the conversation on mental health among youth to eliminate the stigma that is associated with it. Rather than trivializing mental health, the workshops aim to promote understanding and awareness how mental health applies to everyone. It will provide an ongoing and interactive discussion on stigma, determinants of mental health, and issues of mental health that effect youth.<br>
 <br> 
@@ -141,10 +141,10 @@ Dates & Themes: <br>
 March 12th, 2016: Introduction to mental health, communication and the importance of stigma reduction<br>
 March 19th, 2016: School and family related anxiety and stress',width:600,height:400,opacity:20,topsplit:3})" src="./assets/img/program1_dialogue.jpg" style="width: 100%; height: auto;"></img>
                     </div>
-                    <div class="col-md-3">
+                    <div class="col-md-3" style="padding:2px; width: 30%">
                         <img src="./assets/img/program2_yop.jpg" style="width: 100%; height: auto;"></img>
                     </div>
-                    <div class="col-md-3">
+                    <div class="col-md-3" style="padding:2px; width: 30%">
                         <img src="./assets/img/program3_smalltalk.jpg" style="width: 100%; height: auto;"></img>
                     </div>
                 </div>
