--- a/index.html
+++ b/index.html
@@ -132,14 +132,17 @@ Mental illness on the other hand is characterized by alterations in thinking, mo
             </div>
             <div class="row" style="text-align:left;">
                 <div class="col-md-9" style="padding: 10px; background-color:white; font-size:14px; color:black; font-family:'Open Sans', san-serif; ">
-                    <div onclick="TINY.box.show({html:'THE DIALOGUE PROJECT The Dialogue Project is a series of 3 workshops hosted by Roots that will be held at Milton-Park Community Center in winter of 2016 and will aim to educate youth on themes related to student mental health. The main goal of the project is to enhance the dialogue and deepen the conversation on mental health among youth to eliminate the stigma that is associated with it. Rather than trivializing mental health, the workshops aim to promote understanding and awareness how mental health applies to everyone. It will provide an ongoing and interactive discussion on stigma, determinants of mental health, and issues of mental health that effect youth.',width:600,height:400,opacity:20,topsplit:3})" class="col-md-3" style="padding:2px; width: 32%">
+                    <div onclick="TINY.box.show({html:'THE DIALOGUE PROJECT 
+                    The Dialogue Project is a series of 3 workshops hosted by Roots that will be held at Milton-Park Community Center in winter of 2016 and will aim to educate youth on themes related to student mental health. The main goal of the project is to enhance the dialogue and deepen the conversation on mental health among youth to eliminate the stigma that is associated with it. Rather than trivializing mental health, the workshops aim to promote understanding and awareness how mental health applies to everyone. It will provide an ongoing and interactive discussion on stigma, determinants of mental health, and issues of mental health that effect youth.',width:600,height:400,opacity:20,topsplit:3})" class="col-md-3" style="padding:2px; width: 32%">
                         <img src="./assets/img/program1_dialogue.jpg" style="width: 100%; height: auto;"></img>
                     </div>
-                    <div onclick="TINY.box.show({html:'YOUTH OUTREACH PROGRAM COLLABORATION Roots is pleased to announce its new collaboration with Youth Outreach Program (YOP) at McGill. This collaboration will allow us to deliver short, interactive workshops about mental health and self-care to youth in juvenile detention centers around Montreal. Roots facilitators will be holding workshops for YOP volunteers on facilitation and mental health education in order to equip them to educate the youth that they already work with at the detention centers. 
+                    <div onclick="TINY.box.show({html:'YOUTH OUTREACH PROGRAM COLLABORATION 
+                    Roots is pleased to announce its new collaboration with Youth Outreach Program \(YOP\) at McGill. This collaboration will allow us to deliver short, interactive workshops about mental health and self-care to youth in juvenile detention centers around Montreal. Roots facilitators will be holding workshops for YOP volunteers on facilitation and mental health education in order to equip them to educate the youth that they already work with at the detention centers. 
 ',width:600,height:400,opacity:20,topsplit:3})" class="col-md-3" style="padding:2px; width: 32%">
                         <img src="./assets/img/program2_yop.jpg" style="width: 100%; height: auto;"></img>
                     </div>
-                    <div onclick="TINY.box.show({html:'VENT OVER TEA COLLABORATION (SMALL TALK): More details coming soon!',width:600,height:400,opacity:20,topsplit:3})" class="col-md-3" style="padding:2px; width: 32%">
+                    <div onclick="TINY.box.show({html:'VENT OVER TEA COLLABORATION (SMALL TALK)
+                    More details coming soon!',width:600,height:400,opacity:20,topsplit:3})" class="col-md-3" style="padding:2px; width: 32%">
                         <img src="./assets/img/program3_smalltalk.jpg" style="width: 100%; height: auto;"></img>
                     </div>
                 </div>
